# emoji-rs

./: Cargo.toml  build.rs  emojis.json
src/: lib.rs
