[package]
name = "emoji"
version = "0.1.0"
authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
edition = "2018"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.8", features = ["macros"] }
smallvec = "1"

[build-dependencies]
phf_codegen = { version = "0.8" }
phf_shared = { version = "0.8", features = ["std"] }
curl = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
